@@ -56,7 +56,7 @@ BOOL CBlame::BlameCallback(LONG linenumber, svn_revnum_t revision, const CString
 	CStringA authorA(author);
 	CStringA pathA(merged_path);
 	TCHAR c = ' ';
-	if (merged_revision < revision)
+	if ((merged_revision > 0)&&(merged_revision < revision))
 	{
 		dateA = CStringA(merged_date);
 		authorA = CStringA(merged_author);
